--- a/JSS/names.html
+++ b/JSS/names.html
@@ -21,7 +21,6 @@
         Why don't you try it out by filling in your bithday and gender below!</em>
     </P>
     <p>Ghana Akan Children Names Calculator</p>
-    
     <form >
         <label for="date">Date of Birth</label>
         <input type="date" id="date">
@@ -35,6 +34,13 @@
     <button type="submit" onclick="submit()">SUBMIT</button>
     <!-- <button type="reset" onclick="submit()" >Clear</button> -->  
     <p id="results"></p>
+    <div>
+    <li>
+        <a href="https://en.wikipedia.org/wiki/Akan_names" target="_blank"
+        >For more information About Akan Age Calculator click here</a>
+  
+      </li>
+    </div>
 
     <footer>
         <p>Made With Love ♥ ♥ ♥ &nbsp;| MARTHA.</p>
